# NKT-Basik

./: CHANGELOG.md  NKTBasik.py  README.md  bits_handling.py  hatch_build.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
Examples/: control_wavelength.py  tui.py
NKTBasik/: __init__.py  bits_handling.py  constants_and_enums.py  device.py  functions.py  module.py  utils.py
NKTBasik/dll/: NKTP_DLL.py  register_enums.py
dll/: NKTP_DLL.py  register_enums.py
nkt_basik/: __init__.py  bits_handling.py  constants_and_enums.py  functions.py  module.py  utils.py
nkt_basik/dll/: NKTP_DLL.py  register_enums.py
tests/: test_discovery_api.py  test_module_api.py
