[project]
name = "nkt-basik"
version = "0.3.4"
description = "Python interface for the NKT Photonics Basik fiber seed laser"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ograsdijk", email = "o.grasdijk@gmail.com" }]
requires-python = ">=3.7"

dependencies = []

[project.urls]
Repository = "https://github.com/ograsdijk/NKT-Basik"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nkt_basik"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
