[project]
name = "nkt-basik"
version = "0.4.0"
description = "Python interface for the NKT Photonics Basik fiber seed laser"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ograsdijk", email = "o.grasdijk@gmail.com" }]
requires-python = ">=3.11"

dependencies = []

[project.urls]
Repository = "https://github.com/ograsdijk/NKT-Basik"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nkt_basik"]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.14.14",
]
